add-> batch update pwd

--- a/1.批量刷密码/src/config/pwd.properties
+++ b/1.批量刷密码/src/config/pwd.properties
@@ -1,2 +1,8 @@
 ##初始化密码
 init.pwd=666666
+
+[中间库连接信息]
+midDataLink.url=jdbc:oracle:thin:@127.0.0.1:1521/orcl
+midDataLink.username=zlc
+midDataLink.password=zlc
+midDataLink.driver=oracle.jdbc.driver.OracleDriver
