add-> batch update pwd

--- a/1.批量刷密码/src/config/pwd.properties
+++ b/1.批量刷密码/src/config/pwd.properties
@@ -2,7 +2,13 @@
 init.pwd=666666
 
 [中间库连接信息]
-midDataLink.url=jdbc:oracle:thin:@127.0.0.1:1521/orcl
-midDataLink.username=zlc
-midDataLink.password=zlc
+midDataLink.url=jdbc:oracle:thin:@211.87.126.134:1521/orcl
+midDataLink.username=oamid
+midDataLink.password=654321
 midDataLink.driver=oracle.jdbc.driver.OracleDriver
+
+#ceshi
+#midDataLink.url=jdbc:oracle:thin:@127.0.0.1:1521/orcl
+#midDataLink.username=zlc
+#midDataLink.password=zlc
+#midDataLink.driver=oracle.jdbc.driver.OracleDriver
